--- a/RefilWeb/RefilWeb/Views/Shared/_Layout.cshtml
+++ b/RefilWeb/RefilWeb/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/meetings/list">Meetings</a></li>
+                    <li><a href="/books/chooseMeeting">Books</a></li>
                     <li><a href="/announcements/list">Announcements</a></li>
                     
                     @if (User != null && User.IsInRole("Admin"))
