--- a/RefilWeb/RefilWeb/Views/Authentication/LoginView.cshtml
+++ b/RefilWeb/RefilWeb/Views/Authentication/LoginView.cshtml
@@ -28,7 +28,7 @@
                 </div>
                 <div class="text-center">
                     <button class="btn btn-success" type="submit">Login</button>
-                    <a href="/create-account">Create Account</a>
+                    @Html.ActionLink("Create Account", "GetCreateAccount", "User")
                 </div>
 
             </div>
