--- a/RefilWeb/RefilWeb/Views/Admin/AdminEmail.cshtml
+++ b/RefilWeb/RefilWeb/Views/Admin/AdminEmail.cshtml
@@ -22,12 +22,13 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Body, new { @class = "control-label" })
-                @Html.EditorFor(m => m.Body,  new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(m => m.Body,  new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.Body, "", new { @class = "text-danger" })
             </div>
 
             <button type="submit" class="btn">send</button>
         }
-
+        <br />
+        @Html.ActionLink("back to admin home", "GetAdminView", "Admin")
     </div>
 </div>
