--- a/RefilWeb/RefilWeb/Views/Meetings/MeetingEdit.cshtml
+++ b/RefilWeb/RefilWeb/Views/Meetings/MeetingEdit.cshtml
@@ -5,14 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>MeetingEdit</h2>
+<h2>Edit Meeting</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Meeting</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -34,5 +33,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "GetList", "Meetings")
 </div>
